# SyncLite

./: .gitignore  Cargo.toml  README.md
d1/.synclite/: peers.json  state.json
d2/.synclite/: peers.json  state.json
d2/ceva/: ceva.txt
principium_app_info/: entry.json
src/: cli.rs  lib.rs  main.rs
src/app/: mod.rs  registry.rs
src/cli/: mod.rs  parse.rs  types.rs
src/handlers/: mod.rs
src/models/: mod.rs  peers_config.rs  persistent_peers_config.rs  persistent_sync_state.rs  sync_config.rs  sync_state.rs
src/network/: connection_manager.rs  generate_peer_id.rs  message_types.rs  mod.rs  peer_messaging.rs  peer_registry.rs
src/sandboxed/: file_system.rs  mod.rs
src/storage/: initialise.rs  initialise_state.rs  initialise_storage.rs  json_utils.rs  mod.rs  registry.rs  types.rs
src/storage/types/: mod.rs  sync_state.rs
src/sync/: compute_state.rs  initialise_state.rs  merge_states.rs  mod.rs
src/utils/: confirm.rs  handle_result_or_exit.rs  json.rs  log.rs  mod.rs  output.rs  unwrap_or_exit.rs
