[package]
name = "synclite"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.39.0", features = ["full"] }
colored = "3.0.0"
indicatif = "0.18.3"
uuid = {version = "1.15.0", features = ["v4", "serde"]}
chrono = { version = "0.4.30", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["fileapi", "winnt"] }